--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 
   <body>
-    <a href="/gravitational-attraction-calculator"></a>
+    <a href="/gravitational-attraction-calculator">Gravitational Attraction Calculator</a>
   </body>
 </html>
