--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 
   <body>
     <a href="/gravitational-attraction-calculator">Gravitational Attraction Calculator</a>
+    <a href="/password-generator">Password Generator</a>
   </body>
 </html>
